--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -97,6 +97,12 @@ margin: 50px 0px 50px 0;
   color: black;
 }
 
+.btn-wagon-index{
+  position: fixed;
+  bottom: 0;
+  right: 0;
+}
+
 // Media queries
 
 @media(max-width: 992px) {
