--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,6 +10,9 @@
       placeholder: "Find a party"%>
       <%= submit_tag "Let's Go!", class: "btn-submit" %>
   <% end %>
+
+  <%# Add the button 'random trip' %>
+  <%= link_to "I'm flexible", wagons_path, class: "home-random-button" %>
 </div>
 
 <div class="container">
