--- a/app/views/wagons/show.html.erb
+++ b/app/views/wagons/show.html.erb
@@ -57,7 +57,7 @@
                         <h5 class="modal-title">Booking confirmation</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                       </div>
-                      <div class="modal-body">
+                      <div class="modal-body text-black">
                         <p>Your booking for <%=@wagon.name%> on the <%=date%> from <%@wagon.location %> </p>
                         <p>Do you wish to continue?</p>
                       </div>
