--- a/app/views/wagons/show.html.erb
+++ b/app/views/wagons/show.html.erb
@@ -58,7 +58,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                       </div>
                       <div class="modal-body text-black">
-                        <p>Your booking for <%=@wagon.name%> on the <%=date%> from <%@wagon.location %> </p>
+                        <p>Your booking a wagon "<%=@wagon.name%>" on the <%=date%>. </p>
                         <p>Do you wish to continue?</p>
                       </div>
                       <div class="modal-footer">
