--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -33,9 +33,9 @@
 .card-img-top-result > img {
   height: 100%;
   width: 180px;
-  border-radius: 4px;
+  border-radius: 4px 0px 0px 4px;
   object-fit: contain;
-  margin-left: 8px
+  margin-left: -3px
 }
 
 .card-product h1 {
