aligned items on wagon show

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -67,11 +67,13 @@
   font-size: 16px;
 }
 
+#departure-title{
+  padding-left: 40px;
+}
 
 .departure-info h2 {
   color: $pink;
   font-size: 16px;
-  padding-left: 40px;
   font-weight: bold;
 }
 
