--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -47,6 +47,7 @@ margin: 50px 0px 50px 0;
   list-style: none;
   border-radius: 4px;
   position: relative;
+  background-color: $grey-card;
 
     > .booking-destroy-btn {
       margin-top: 5px;
@@ -59,6 +60,7 @@ margin: 50px 0px 50px 0;
       position: absolute;
       bottom: 10px;
       right: 10px;
+      background-color: $pink;
     }
 
     > .booking-destroy-btn:hover {
