--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -39,6 +39,7 @@ margin: 50px 0px 50px 0;
   list-style: none;
   border-radius: 4px;
   position: relative;
+  background-color: $grey-card;
 }
 
 
@@ -70,7 +71,7 @@ margin: 50px 0px 50px 0;
 
     > .booking-destroy-btn:hover {
       background-color: white;
-      color: black;
+      color: $pink;
     }
 }
 
@@ -97,11 +98,12 @@ margin: 50px 0px 50px 0;
   position: absolute;
   bottom: 10px;
   right: 10px;
+  background-color: $pink;
 }
 
 .wagon-links:hover {
   background-color: white;
-  color: black;
+  color: $pink;
 }
 
 .btn-wagon-index{
