change text home

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,17 +18,17 @@
 <div class="container">
   <h2 class="home-h2 mb-3">Our wagons, your rules 🚃</h2>
 </div>
-<div class="home-features">
+<div class="home-features text-center">
   <div class="feature-card feature-card-1">
     <div class="feature-image">
       <%= image_tag("feature-1")%>
     </div>
     <div class="feature-description">
       <div class="feature-description-title">
-        <h3>Don't waste your time</h3>
+        <h3><strong>Rule #1:</strong> Don't waste any minute of partying</h3>
       </div>
       <div class="feature-description-text">
-        <p>Enjoy the travel time before the real party</p>
+        <p> Arriving to your destination later than everyone? You have major Fear of Missing Out? Think your friends all are going to be drunk before you? Don't you worry, we gotcha! Embarking on the Wagon Party will ensure you are at least as drunk as the people you are joining ... With all our drinking games, we can't promise you you won't puke before midnight. But isn't that what all the fun is about?</p>
       </div>
     </div>
   </div>
@@ -36,10 +36,13 @@
   <div class="feature-card feature-card-2">
     <div class="feature-description">
       <div class="feature-description-title">
-        <h3>No limit in our Wagons</h3>
+        <h3><strong>Rule #2:</strong> What happens in the Wagon Party stays in the Wagon Party</h3>
       </div>
       <div class="feature-description-text">
-        <p>Have fun ! but don't jump off the train (please)</p>
+        <p>Puked on the blanket? Had sex with the stripper? Trashed the wagon?
+        Your secret is ours, as long as your friends keep it for you as well... <br>
+        <em>Disclaimer:</em> Beware that if you fall off the train, we do not take responsibility and will not be held accountable. Funeral costs will be at your charge.
+       </p>
       </div>
     </div>
     <div class="feature-image">
@@ -53,10 +56,10 @@
     </div>
     <div class="feature-description">
       <div class="feature-description-title">
-        <h3>Relax with your friends</h3>
+        <h3><strong>Rule #3:</strong> Relax, and we will take care of it </h3>
       </div>
       <div class="feature-description-text">
-        <p>You won't even see the time pass</p>
+        <p>We know you are busy, we know you want a careless journey. Everything is taken care of by our staff. You just need to relax and be ready to party. </p>
       </div>
     </div>
   </div>
