--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,7 +21,7 @@
 <div class="home-features">
   <div class="feature-card feature-card-1">
     <div class="feature-image">
-      <%= image_tag("feature-1")%>
+      <%= image_tag("feature-1.svg")%>
     </div>
     <div class="feature-description">
       <div class="feature-description-title">
@@ -43,13 +43,13 @@
       </div>
     </div>
     <div class="feature-image">
-      <%= image_tag("feature-2")%>
+      <%= image_tag("feature-2.svg")%>
     </div>
   </div>
 
   <div class="feature-card feature-card-3">
     <div class="feature-image">
-      <%= image_tag("feature-3")%>
+      <%= image_tag("feature-3.svg")%>
     </div>
     <div class="feature-description">
       <div class="feature-description-title">
