--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,7 +28,7 @@
         <h3><strong>Rule #1:</strong> Don't waste any minute of partying</h3>
       </div>
       <div class="feature-description-text">
-        <p> Arriving to your destination later than everyone? You have major Fear of Missing Out? Think your friends all are going to be drunk before you? Don't you worry, we gotcha! Embarking on the Wagon Party will ensure you are at least as drunk as the people you are joining ... With all our drinking games, we can't promise you you won't puke before midnight. But isn't that what all the fun is about?</p>
+        <p> Arriving to your destination later than everyone? 🥺 Think your friends are all going to be drunk before you? 😭 Don't you worry, we gotcha! Embarking on the Wagon Party will ensure you are at least as drunk as the people you are joining... 🥳 </p>
       </div>
     </div>
   </div>
@@ -39,8 +39,8 @@
         <h3><strong>Rule #2:</strong> What happens in the Wagon Party stays in the Wagon Party</h3>
       </div>
       <div class="feature-description-text">
-        <p>Puked on the blanket? Had sex with the stripper? Trashed the wagon?
-        Your secret is ours, as long as your friends keep it for you as well... <br>
+        <p>Puked on the blanket? 🤮 Had sex with the stripper? 🍆 Trashed the wagon? 🧨
+        Your secret is ours... 😉 <br>
         <em>Disclaimer:</em> Beware that if you fall off the train, we do not take responsibility and will not be held accountable. Funeral costs will be at your charge.
        </p>
       </div>
@@ -59,7 +59,7 @@
         <h3><strong>Rule #3:</strong> Relax, and we will take care of it </h3>
       </div>
       <div class="feature-description-text">
-        <p>We know you are busy, we know you want a careless journey. Everything is taken care of by our staff. You just need to relax and be ready to party. </p>
+        <p>We know you are busy, we know you want a careless journey 😎 Everything is taken care of by our staff 💂‍♂️ You just need to relax and be ready to party ! 🕺💃 </p>
       </div>
     </div>
   </div>
