--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -12,7 +12,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-
+      width: 60%;
   }
 
   > .feature-card-1, .feature-card-3{
@@ -24,6 +24,9 @@
     color: white;
   }
 
+  > .feature-description-text {
+    text-align: justify;
+  }
 }
 
 
