--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,7 +37,7 @@
         </div>
         <div class="card-wagon-description ms-3">
           <h4 class="m-0"><%= wagon.name %></h4>
-          <p class="mb-0">Description: <%= wagon.description %></p>
+          <p class="mb-0">Description: <%= truncate wagon.description, length: 80 %></p>
           <p class="mb-0">📍 <%= wagon.location %> &nbsp;&nbsp;👥 <%= wagon.capacity %></p>
           <p class="mb-0"></p>
           <% if policy(wagon).edit? %>
