--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,8 @@
         <h4>Booking n° <%= booking.id %></h4>
         <li><%= "📅 Date : #{booking.start_date}" %></li>
         <li><%= "🚃 From : #{booking.start_location}" %></li>
+        <li><%= "⭐ Your rating : #{booking.rating} #{booking.comment}"%></li>
+        <%= link_to "Leave a rating", edit_user_booking_path(@user, booking), class:'booking-update-btn'%>
         <%= link_to "Cancel my booking", user_booking_path(@user, booking), method: :delete, data: {confirm: 'Are you sure?'}, class:'booking-destroy-btn' %>
       </div>
     </div>
