--- a/app/views/wagons/show.html.erb
+++ b/app/views/wagons/show.html.erb
@@ -29,9 +29,8 @@
         </div>
         <div class="card-product-infos">
           <h2>Information</h2>
-          <p><strong>From:</strong> Paris</p>
-          <p><strong>To:</strong> Marseille</p>
-          <p><strong>Departure:</strong> Gare de Lyon, Samedi 05 Mars, 20h</p>
+          <p><strong>From : </strong> Paris, Gare de Lyon, 19h</p>
+          <p><strong>To : </strong><%= @wagon.location %></p>
           <p><strong>Contact :</strong> 01-02-03-04-05</p>
         </div>
       </div>
