--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -97,7 +97,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid lightgray;
+  border: 0;
   padding: 15px;
   border-radius: 4px;
   margin-bottom: 30px;
