--- a/app/views/wagons/show.html.erb
+++ b/app/views/wagons/show.html.erb
@@ -16,9 +16,9 @@
           <p> 🏷 <strong><%=rand(400..2000)%>€ / per trip</strong></p>
           <p> 👥 <%= @wagon.capacity %> </p>
           <div class="card-product-img d-flex">
-            <img src="/assets/feature-4.svg" alt="" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-trigger="hover" title="Free wifi">
-            <img src="/assets/feature-card.svg" alt="" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-trigger="hover" title="Payment in 3 times">
-            <img src="/assets/feature-cocktail.svg" alt="" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-trigger="hover" title="Open Bar">
+            <%= image_tag "feature-4.svg", data: {bs_toggle:'tooltip', bs_placement:"top", bs_trigger:"hover", title:"Free Wifi"} %>
+            <%= image_tag "feature-card.svg", data: {bs_toggle:"tooltip", bs_placement:"top", bs_trigger:"hover", title:"Payment in 3 times"} %>
+            <%= image_tag "feature-cocktail.svg", data: {bs_toggle:"tooltip", bs_placement:"top", bs_trigger:"hover", title:"Open Bar"} %>
           </div>
         </div>
       </div>
