--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -65,7 +65,7 @@
   </div>
 
 <div class="container">
-  <h2 class="home-h2 mb-3">Our top recommendations 🕺</h2>
+  <h2 class="home-h2 mb-3 text-left">Our top recommendations 🕺</h2>
   <div class="home-cards-container">
     <% @wagons = Wagon.all.sample(3) %>
     <% @wagons.each do |wagon|%>
