--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,11 @@
   </head>
 
   <body>
+    <% if params[:action] == "home" %>
     <nav class="navbar-home fixed-top" data-controller="navbar" data-action="scroll@window->navbar#updateNavbar">
+    <% else %>
+    <nav class="navbar-home fixed-top navbar-black" data-action="scroll@window->navbar#updateNavbar">
+    <% end %>
       <ul>
         <li>
             <%= link_to "Wagon party", root_path, class: "logo"%>
